--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -78,7 +78,7 @@
 .footersocial a {
   color: #127234;
   font-size: 20px;
-  background: #d9d9d9;
+  background: #FFF;
   padding: 12px;
   border-radius: 50%;
   display: flex;
