--- a/styles/Chatbot.module.css
+++ b/styles/Chatbot.module.css
@@ -426,3 +426,13 @@
     transform: scale(1.2);
   }
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .ipadMockupLeft {
+    margin-right: 40px !important;
+  }
+
+  .ipadMockupRight {
+    margin-left: 40px !important;
+  }
+}
