--- a/styles/Chatbot.module.css
+++ b/styles/Chatbot.module.css
@@ -271,11 +271,13 @@
   border-radius: 0;
   overflow: hidden;
   width: 100%;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
 }
 
 .carousel-item {
   height: 580px;
   width: 100%;
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out !important;
 }
 
 .carouselImageContainer {
@@ -334,8 +336,17 @@
 .carousel-indicators .active {
   background-color: #127234 !important;
   transform: scale(1.3) !important;
+    opacity: 1 !important;
 }
 
+.carousel-item:not(.active) {
+  opacity: 0 !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: block;
+}
 
 .carouselIndicators {
   margin-top: 15px;
