fix: fundo da tela home

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,7 @@
 }
 
 .hero {
-  background: url("/imagens/homenvv.png") no-repeat center center/cover;
+  background: url("/imagens/homecerto.png") no-repeat center center/cover;
   min-height: 100vh;
   position: relative;
   display: flex;
