ajuste na msg boas vindas do Iagro

--- a/styles/Chatbot.module.css
+++ b/styles/Chatbot.module.css
@@ -300,6 +300,10 @@
   margin-bottom: 40px;
 }
 
+.message {
+  white-space: pre-line;
+}
+
 .carousel-indicators {
   position: absolute !important;
   bottom: 10px !important;
