--- a/styles/ChatWidget.module.css
+++ b/styles/ChatWidget.module.css
@@ -42,7 +42,7 @@
 
 .chatHeader {
   background-color: #127234;
-  color: #E8F5E9;
+  color: #e8f5e9;
   padding: 15px;
   text-align: center;
   flex-shrink: 0;
@@ -108,12 +108,12 @@
   max-width: 90%;
 }
 .message p {
-  padding: 8px 12px; 
+  padding: 8px 12px;
   border-radius: 18px;
   margin: 0;
   word-wrap: break-word;
-  font-size: 0.8rem; 
-  line-height: 1.5; 
+  font-size: 0.8rem;
+  line-height: 1.5;
 }
 .message.user p {
   background-color: #dcf8c6;
@@ -151,7 +151,6 @@
   display: flex;
   padding: 5px;
   border-top: 1px solid #eee;
-  
 }
 .inputArea input {
   flex-grow: 1;
@@ -247,7 +246,8 @@
 
   .chatWindow {
     width: 100vw;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+    max-height: calc(var(--vh, 1vh) * 100);
     max-height: 100vh;
     border-radius: 0;
     bottom: 0;
@@ -255,6 +255,8 @@
     position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
   }
 
   .chatHeader {
