--- a/styles/ChatWidget.module.css
+++ b/styles/ChatWidget.module.css
@@ -26,8 +26,12 @@
 }
 
 .chatWindow {
-  width: 400px;
-  height: 550px;
+  max-width: 60vh;
+  max-height: 85vh; 
+  width: 60vw; 
+  height: 85vh; 
+  
+  /* Suas propriedades existentes */
   background-color: white;
   color: #0f5c2b;
   border-radius: 15px;
@@ -35,7 +39,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  position: absolute;
+  position: absolute; /* Mantenha como 'absolute' dentro do widgetContainer */
   bottom: 0;
   right: 0;
 }
@@ -53,7 +57,7 @@
 }
 .chatHeader p {
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   opacity: 0.9;
 }
 
@@ -63,14 +67,16 @@
   bottom: 115px;
   background-color: #ffffff;
   color: #0f5c2b;
-  padding: 8px 12px;
+  padding: 5px 8px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
-  font-size: 0.7rem;
-  font-weight: 600;
+  font-size: 0.8rem;
+  font-weight: 500;
   white-space: nowrap;
-  max-width: 800%;
+  max-width: 400%;
   border-color: #ffffff;
+  text-align: center;
+  
 }
 
 .chatToggleButton {
@@ -94,11 +100,11 @@
 
 .messageList {
   flex-grow: 1;
-  padding: 15px;
+  padding: 10px;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 5px;
   background-color: #f4f7f6;
 }
 .message {
@@ -112,7 +118,7 @@
   border-radius: 18px;
   margin: 0;
   word-wrap: break-word;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   line-height: 1.5;
 }
 .message.user p {
@@ -134,8 +140,8 @@
   align-self: flex-start;
 }
 .avatar {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   object-fit: cover;
   flex-shrink: 0;
