--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,7 +33,6 @@
 
 .logoContainer {
   max-width: 100%;
-  padding: 20px;
 }
 
 .logoContainer img {
@@ -62,6 +61,7 @@
   border: none;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-right: 10px;
+  margin-top: 10px;
 }
 
 .btn:hover {
