Correção responsividades cadeado de login

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -164,6 +164,44 @@
   gap: 5px;                 
 }
 
+
+.legalHeader {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+
+.chevronIcon {
+  font-size: 12px;
+  color: #4caf50;
+  transition: transform 0.3s ease;
+}
+
+.legalLinks {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  gap: 10px;
+  padding-left: 15px;
+}
+
+.legalLinks a {
+  display: block;
+  padding: 4px 0;
+  text-decoration: none;
+  color: #004809;
+  transition: color 0.3s;
+  font-size: 16px;
+}
+
+.legalLinks a:hover {
+  text-decoration: underline;
+  color: #127234;
+}
+
+
 @media (max-width: 768px) {
   .footer {
     padding: 20px;
@@ -239,4 +277,20 @@
   .footerline {
     margin: 20px 0;
   }
+
+
+
+  .legalHeader {
+    justify-content: center;
+  }
+  
+  .legalLinks {
+    align-items: center;
+    padding-left: 0;
+  }
+  
+  .footerlegal {
+    align-items: center;
+  }
+  
 }
